syntax = "proto3";

import "gorums.proto";
import "google/protobuf/empty.proto";

package protos;

option go_package = "github.com/vidarandrebo/oncetree/protos";

message ReadRequest {int64 Key = 1;}
message ReadResponse {int64 Value = 1;}
// ReadAllResponse contains a map Address -> Value
message ReadAllResponse {map<string, int64> Value = 1;}

message WriteRequest {
  int64 Key = 1;
  int64 Value = 2;
}

message GroupInfo {
  string NodeID = 1;
  string NeighbourID = 2;
  string NeighbourAddress = 3;
  int64 NeighbourRole = 4;
}

message GossipMessage {
  string NodeID = 1;
  int64 Key = 2;
  int64 Value = 3;
  int64 Timestamp = 4;
}

message HeartbeatMessage {string NodeID = 1;}

message PrepareMessage {
  string NodeID = 1;
  string Hash = 2;
  int64 Round = 3;
}
message PromiseMessage {
  string NodeID = 1;
  string Hash = 2;
  int64 Round = 3;
}

message AcceptMessage {
  string Key = 1;
  int64 Value = 2;
  int64 Round = 3;
}
message LearnMessage {
  string Key = 1;
  int64 Value = 2;
  int64 Round = 3;
}

service KeyValueService {
  rpc Write(WriteRequest) returns (google.protobuf.Empty) {}
  rpc Read(ReadRequest) returns (ReadResponse) {}
  rpc ReadAll(ReadRequest) returns (ReadAllResponse) {
    option (gorums.quorumcall) = true;
  }
  rpc Heartbeat(HeartbeatMessage) returns (google.protobuf.Empty) {
    option (gorums.multicast) = true;
  }
  rpc SetGroupMember(GroupInfo) returns (google.protobuf.Empty) {
    option (gorums.multicast) = true;
  }
  rpc Gossip(GossipMessage) returns (google.protobuf.Empty) {}
  rpc PrintState(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc Prepare(PrepareMessage) returns (google.protobuf.Empty) {
    option (gorums.multicast) = true;
  }
  rpc Promise(PromiseMessage) returns (google.protobuf.Empty) {}
  rpc Accept(AcceptMessage) returns (google.protobuf.Empty) {
    option (gorums.multicast) = true;
  }
  rpc Learn(LearnMessage) returns (google.protobuf.Empty) {
    option (gorums.multicast) = true;
  }
  rpc Crash(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}
